name:                darkplaces-rcon
version:             0.1
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
synopsis:            Darkplaces rcon client
-- description:         

library
  exposed-modules:     DarkPlaces.Rcon
  hs-source-dirs:      src
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       cryptohash >= 0.11 && <0.12,
                       network >= 2.6,
                       time >= 1.3,
                       byteable

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  ghc-prof-options:    -prof -auto-all -rtsopts -fprof-auto -caf-all
  default-language:    Haskell2010

test-suite rcon-tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <4.8,
                       darkplaces-rcon,
                       hspec

  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
