name:                darkplaces-rcon
version:             0.1
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
synopsis:            Darkplaces rcon client
-- description:         

flag IntegrationTest
    default:           False
    description:       Enable Integration testing

library
  exposed-modules:     DarkPlaces.Rcon,
                       DarkPlaces.Rcon.Internal
  hs-source-dirs:      src
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <5,
                       bytestring >=0.10 && <0.11,
                       cryptohash >= 0.11 && <0.12,
                       network >= 2.6,
                       time >= 1.3,
                       byteable

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  ghc-prof-options:    -prof -auto-all -rtsopts -fprof-auto -caf-all
  default-language:    Haskell2010

test-suite rcon-tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       darkplaces-rcon,
                       hspec-core,
                       hspec

  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

  if flag(IntegrationTest)
    cpp-options:       -DINTEGRATION


executable drcon
  main-is:             DRcon.hs
  hs-source-dirs:      utils
  default-language:    Haskell2010
  other-modules:       DarkPlaces.Rcon.Util

  build-depends:       base >=4.5 && <5,
                       mtl >=2.0,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.10 && < 0.12,
                       utf8-string >=0.3,
                       ConfigFile >=1.1,
                       filepath,
                       directory,
                       HostAndPort,
                       darkplaces-text >= 0.2,
                       darkplaces-rcon,
                       haskeline >= 0.7

  default-extensions:  CPP
  cpp-options:         -DCABAL_VERSION


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
