name:                darkplaces-rcon-util
version:             0.1
synopsis:            Darplaces rcon utility
homepage:            https://github.com/bacher09/darkplaces-rcon
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DRcon.Util

  build-depends:       base >=4.5 && <5,
                       mtl >=2.0,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.10 && < 0.12,
                       utf8-string >=0.3,
                       ConfigFile >=1.1,
                       filepath,
                       directory,
                       HostAndPort,
                       darkplaces-text >= 0.2,
                       darkplaces-rcon,
                       haskeline >= 0.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP


executable drcon
  main-is:             Main.hs
  build-depends:       base >=4.5 && <5,
                       mtl >=2.0,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.10 && < 0.12,
                       utf8-string >=0.3,
                       ConfigFile >=1.1,
                       filepath,
                       directory,
                       HostAndPort,
                       darkplaces-text >= 0.2,
                       darkplaces-rcon,
                       darkplaces-rcon-util,
                       haskeline >= 0.7

  default-language:    Haskell2010
  default-extensions:  CPP
  cpp-options:         -DCABAL_VERSION


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
