name:                darkplaces-rcon-util
version:             0.1
synopsis:            Darplaces rcon utility
homepage:            https://github.com/bacher09/darkplaces-rcon
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DRcon.CommandArgs,
                       DRcon.ConfigFile,
                       DRcon.Paths,
                       DRcon.EvalParser,
                       DRcon.Prompt

  other-modules:       DRcon.Polyfills

  build-depends:       base >=4.5 && <5,
                       mtl >=2.0,
                       bytestring >=0.10 && <0.11,
                       time >=1.4 && <1.6,
                       old-locale,
                       optparse-applicative >= 0.10 && < 0.12,
                       containers >= 0.5,
                       utf8-string >=0.3,
                       ConfigFile >=1.1,
                       filepath,
                       directory,
                       HostAndPort,
                       darkplaces-text >= 0.2,
                       darkplaces-rcon,
                       text >=1.0,
                       haskeline >= 0.7

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP


executable drcon
  main-is:             Main.hs
  build-depends:       base >=4.5 && <5,
                       mtl >=2.0,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.10 && < 0.12,
                       utf8-string >=0.3,
                       darkplaces-text >= 0.2,
                       darkplaces-rcon,
                       darkplaces-rcon-util,
                       text >=1.0,
                       haskeline >= 0.7

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
  default-extensions:  CPP
  cpp-options:         -DCABAL_VERSION

test-suite rcon-util-tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       darkplaces-rcon-util,
                       darkplaces-rcon,
                       hspec-core,
                       hspec

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
