name:                darkplaces-rcon-util
version:             0.2.2
synopsis:            Darplaces rcon utility
homepage:            https://github.com/bacher09/darkplaces-rcon
bug-reports:         https://github.com/bacher09/darkplaces-rcon/issues
copyright:           (c) Slava Bacherikov 2015
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10
description:

    This is implementation of rcon shell for darkplaces engine.
    For more info visit https://github.com/bacher09/darkplaces-rcon/blob/master/darkplaces-rcon-util/README.md

flag LinuxStatic
    default:          False
    description:      Build static binary for linux

flag old-locale
  description: If false then depend on time >= 1.5.
               .
               If true then depend on time < 1.5 together with old-locale.
  default: False

library
  exposed-modules:     DRcon.CommandArgs,
                       DRcon.ConfigFile,
                       DRcon.Paths,
                       DRcon.EvalParser,
                       DRcon.Prompt,
                       DRcon.Version,
                       DRcon.ConsoleWrapper

  other-modules:       DRcon.Polyfills,
                       Paths_darkplaces_rcon_util

  build-depends:       base >=4.7 && <5,
                       mtl >=2.0,
                       bytestring >=0.11 && <0.12,
                       optparse-applicative >= 0.15 && < 0.18,
                       network >= 3.1 && < 4.0,
                       containers >= 0.5,
                       utf8-string >=0.3,
                       ConfigFile >=1.1,
                       filepath,
                       directory,
                       HostAndPort,
                       darkplaces-text >= 0.3,
                       darkplaces-rcon,
                       text >=1.0,
                       haskeline >= 0.7,
                       exceptions

  if flag(old-locale)
    build-depends:     time < 1.5, old-locale
  else
    build-depends:     time >= 1.5

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP
  cpp-options:         -DCABAL_VERSION


executable drcon
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       mtl >=2.0,
                       bytestring >=0.11 && <0.12,
                       network >= 3.1 && < 4.0,
                       optparse-applicative >= 0.15 && < 0.18,
                       utf8-string >=0.3,
                       darkplaces-text >= 0.3,
                       darkplaces-rcon,
                       darkplaces-rcon-util,
                       text >=1.0,
                       haskeline >= 0.7,
                       conduit,
                       exceptions

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

  if flag(LinuxStatic)
    ghc-options:       -optl-static -optl-pthread


test-suite rcon-util-tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs

  other-modules:       DRcon.EvalParserSpec,
                       DRcon.ConfigFileSpec

  build-depends:       base >=4.7 && <5,
                       bytestring >=0.11 && <0.12,
                       darkplaces-rcon-util,
                       darkplaces-rcon,
                       darkplaces-text >= 0.3,
                       text >=1.0,
                       ConfigFile >=1.1,
                       hspec-core,
                       hspec

  build-tool-depends:  hspec-discover:hspec-discover -any
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
