name:                darkplaces-rcon
version:             0.2.1
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
homepage:            https://github.com/bacher09/darkplaces-rcon
bug-reports:         https://github.com/bacher09/darkplaces-rcon/issues
copyright:           (c) Slava Bacherikov 2015
category:            Game
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Darkplaces rcon client library
description:         

  Rcon client library for Darkplaces game engine. It fully
  implemnts both non-secure and "secure" rcon protocols.
  Supports such games as Xonotic, Nexuiz.

flag IntegrationTest
    default:          False
    description:      Enable Integration testing

library
  exposed-modules:     DarkPlaces.Rcon,
                       DarkPlaces.Rcon.Internal
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       bytestring >=0.11 && <0.12,
                       cryptohash >= 0.11 && <0.12,
                       network >= 3.1 && < 4.0,
                       time >= 1.3,
                       byteable

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing
  ghc-prof-options:    -prof -auto-all -rtsopts -fprof-auto -caf-all
  default-language:    Haskell2010

test-suite rcon-tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       DarkPlaces.RconSpec,
                       DarkPlaces.Rcon.InternalSpec

  build-depends:       base >=4.7 && <5,
                       bytestring >=0.11 && <0.12,
                       darkplaces-rcon,
                       hspec-core,
                       hspec

  build-tool-depends:  hspec-discover:hspec-discover -any

  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

  if flag(IntegrationTest)
    cpp-options:       -DINTEGRATION


source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-rcon.git
